"enum" support for all types "format" support for string type long type support for "maximum" and "minimum" on integer type "allOf" support "oneOf" support "anyOf" support

--- a/readme.adoc
+++ b/readme.adoc
@@ -60,6 +60,12 @@ System.out.println(writer.writeValueAsString(
 * [ ] oneOf
 * [ ] anyOf
 * [ ] allOf
+* [ ] format
+* [ ] enum
+* [ ] dependencies
+* [ ] (min|max)Properties
+* [ ] uniqueItems
+* [ ] definitions
 
 === v7
 
