--- a/readme.adoc
+++ b/readme.adoc
@@ -61,9 +61,9 @@ System.out.println(writer.writeValueAsString(
 |===
 h| Status          h| Feature           h| Notes
  | [red]#*TODO*#    | `"dependencies"`   | Target 1.2
- | [red]#*TODO*#    | `"minProperties"`  | Target 1.2
- | [red]#*TODO*#    | `"maxProperties"`  | Target 1.2
- | [red]#*TODO*#    | `"uniqueItems"`    | Target 1.2
+ | [green]#*Done*#  | `"minProperties"`  | Target 1.2
+ | [green]#*Done*#  | `"maxProperties"`  | Target 1.2
+ | [green]#*Done*#  | `"uniqueItems"`    | Target 1.2
  | [red]#*TODO*#    | `"definitions"`    | Target 1.2
  | [red]#*TODO*#    | Multi-type nodes   | Target 1.3
  | [yellow]#*WIP*#  | `"format"`         | Supported on strings as of 1.1
