--- a/readme.adoc
+++ b/readme.adoc
@@ -61,11 +61,11 @@ System.out.println(writer.writeValueAsString(
 |===
 h| Status          h| Feature           h| Notes
  | [red]#*TODO*#    | `"dependencies"`   | Target 1.2
- | [green]#*Done*#  | `"minProperties"`  | Target 1.2
- | [green]#*Done*#  | `"maxProperties"`  | Target 1.2
- | [green]#*Done*#  | `"uniqueItems"`    | Target 1.2
- | [red]#*TODO*#    | `"definitions"`    | Target 1.2
- | [red]#*TODO*#    | Multi-type nodes   | Target 1.3
+ | [green]#*Done*#  | `"minProperties"`  | In 1.2
+ | [green]#*Done*#  | `"maxProperties"`  | In 1.2
+ | [green]#*Done*#  | `"uniqueItems"`    | In 1.2
+ | [green]#*Done*#  | `"definitions"`    | In 1.2
+ | [red]#*TODO*#    | Multi-type nodes   | Target 1.4
  | [yellow]#*WIP*#  | `"format"`         | Supported on strings as of 1.1
  | [yellow]#*WIP*#  | `"enum"`           | Basic support as of 1.1
  | [green]#*Done*#  | `"oneOf"`          | In 1.1
